examples/test/testpolicy13618.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13618
  namespace: namespace237
spec:
  podSelector:
    matchLabels:
      key46: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value20
          key8: value38
      podSelector:
        matchLabels:
          key20: value22
          key47: value44
